https://twitter.com/fashionnemico?lang=en

--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
 			</figure>
 
 			<figure class="col-md-3 col-sm-4 col-xs-6">
+				<a href="https://www.qtsdeals.com/pricing" target="_blank">
 					<img class="img-fluid" src="img\portfolio\08-thumbnail.jpg" alt="Complete Point Of Sale Solution">
 					<p>Complete Point Of Sale Solution</p>
+					</a>
 			</figure>
 
 			
@@ -256,7 +258,7 @@
 				<div class="timeline-badge"><i class="ion-briefcase"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title"><a href="https://quadrate.cc/">Quadrate</a></h4>
+						<h4 class="timeline-title"><a href="https://quadrate.lk/">Quadrate</a></h4>
 						<p>July-2020 - Present</p>
 						<p>Full-Stack Developer</p>
 					</div>
@@ -295,7 +297,7 @@
 				<div class="timeline-badge"><i class="ion-briefcase"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title"><a href="http://nemico.lk">Nemico Holdings</a></h4>
+						<h4 class="timeline-title"><a href="https://twitter.com/fashionnemico?lang=en">Nemico Holdings</a></h4>
 						<p>Jan 2016 - Dec 2018</p>
 						<p>Software Developer</p>
 					</div>
